# quant_strat

./: README.md  pyproject.toml
data/: sample_prices.csv
src/trend_trader/: __init__.py  backtester.py  cli.py  data.py  metrics.py  strategy.py
src/trend_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backtester.py  test_metrics.py
