[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-trader"
version = "0.1.0"
description = "Trend trading strategy with backtesting, risk metrics, and CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "QuantStrategies" }
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["src"]
